# protocol_tester_parser

./: .gitignore
fw_description/meshes/bases/: freeway_restaurant_robot.stl
fw_description/urdf/: fw_rev_04_jay.xacro
mega_serialtester/: mega_serialtester.ino  mega_serialtester_modified.ino
mega_serialtester/mega_serialtester_rev02/: mega_serialtester_rev02.ino
serial_parser/: CMakeLists.txt  package.xml
serial_parser/config/: fw_etri_params.yaml
serial_parser/launch/: serial_parser_node.launch
serial_parser/src/: etri.rules  etri_com_protocol.cpp  log_param.py  test.cpp
